# bloom-guanaco-lora

./: .pre-commit-config.yaml  README.md
.github/workflows/: build.yml  pre-commit.yml
bloom-guanaco-lora/: Dockerfile  config.yml  docker-compose.yml  pyproject.toml  train  train.py
bloom-guanaco-lora/app/: __init__.py  bloom_lora.py  confg.py  config.py  export_hf_checkpoint.py  finetune.py  hyperparameter.py  prompt.py  utils.py
