[tool.poetry]
name = "bloom-guanaco-lora"
version = "0.0.1"
description = ""
authors = ["Toshihiro Nakae <<tnakae@users.noreply.github.com>>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
datasets = "^2.10.1"
transformers = "^4.27.2"
accelerate = "^0.17.1"
bitsandbytes = "^0.37.1"
peft = "^0.2.0"
gradio = "^3.23.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pre-commit = "^3.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
